--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
               android:name="com.google.firebase.messaging.default_notification_channel_id"
               android:value="high_importance_channel"
               />
+            <meta-data
+             android:name="com.onesignal.NotificationChannel"
+             android:value="high_importance_channel" />
+
 
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
