--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   url_launcher: 6.3.1
   sms_autofill: ^2.4.1
   geolocator: ^13.0.1
+  onesignal_flutter: ^5.2.7
+  animated_text_kit: ^4.2.2
+  loading_animation_widget: ^1.3.0
 
 
 dev_dependencies:
