--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,6 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   provider: ^6.1.2
   pinput: ^5.0.0
-  firebase_auth: ^5.3.2
-  firebase_messaging: ^15.1.4
   permission_handler: ^11.3.1
   flutter_inappwebview: ^6.1.5
   connectivity_plus: ^5.0.1
@@ -53,13 +51,9 @@ dependencies:
   fluttertoast: ^8.2.8
   path_provider: ^2.1.5
   flutter_svg: ^2.0.14
-  firebase_core: ^3.8.0
-  flutter_local_notifications: ^18.0.1
   url_launcher: 6.3.1
   sms_autofill: ^2.4.1
   geolocator: ^13.0.1
-  onesignal_flutter: ^5.2.7
-  animated_text_kit: ^4.2.2
   loading_animation_widget: ^1.3.0
 
 
@@ -67,6 +61,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.14.1
+  dart_code_linter: ^1.2.1
 flutter_launcher_icons:
   android: true
   image_path: "assets/images/logo.png" 
@@ -115,11 +110,7 @@ flutter:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+ 
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
