--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "com.example.neethusacademy"
+    namespace "com.example.NeethusApp"
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
@@ -53,11 +53,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.neethusacademy"
+        applicationId "com.example.NeethusApp"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 23
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -65,7 +65,7 @@ android {
        release {       
             keyAlias 'keyfile'
             keyPassword 'upload'
-            storeFile file('C:/Users/esight/keystore.jks') 
+            storeFile file('C:/Users/arjun/Documents/keystore.jks') 
             storePassword 'upload'
            
        }
