--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   sms_autofill: ^2.4.1
   geolocator: ^13.0.1
   loading_animation_widget: ^1.3.0
+  firebase_core: ^3.9.0
+  webview_flutter: ^4.10.0
 
 
 dev_dependencies:
@@ -62,11 +64,12 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.1
   dart_code_linter: ^1.2.1
+  change_app_package_name: ^1.4.0
 flutter_launcher_icons:
   android: true
-  image_path: "assets/images/logo.png" 
+  image_path: "assets/images/neethuslogo.png" 
   adaptive_icon_background: "#562DB7"  # Or use an image path here
-  adaptive_icon_foreground: "assets/images/editedlogo.png"
+  adaptive_icon_foreground: "assets/images/neethuslogo.png"
    
 
   # The "flutter_lints" package below contains a set of recommended lints to
