--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,71 +2,78 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <!-- General App Information -->
-    <key>CFBundleDevelopmentRegion</key>
-    <string>$(DEVELOPMENT_LANGUAGE)</string>
-    <key>CFBundleDisplayName</key>
-    <string>Neethusacademy</string>
-    <key>CFBundleExecutable</key>
-    <string>$(EXECUTABLE_NAME)</string>
-    <key>CFBundleIdentifier</key>
-    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-    <key>CFBundleInfoDictionaryVersion</key>
-    <string>6.0</string>
-    <key>CFBundleName</key>
-    <string>neethusacademy</string>
-    <key>CFBundlePackageType</key>
-    <string>APPL</string>
-    <key>CFBundleShortVersionString</key>
-    <string>$(FLUTTER_BUILD_NAME)</string>
-    <key>CFBundleSignature</key>
-    <string>????</string>
-    <key>CFBundleVersion</key>
-    <string>$(FLUTTER_BUILD_NUMBER)</string>
-
-    <!-- Location Permission -->
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Your app requires location access to provide location-based features.</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>Your app requires location access to provide location-based features even when the app is in the background.</string>
-
-    <!-- Contacts Permission -->
-    <key>NSContactsUsageDescription</key>
-    <string>Your app requires access to contacts to manage your contacts.</string>
-
-    <!-- Photo Library Permissions -->
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>Your app requires access to your photo library to upload or view pictures.</string>
-
-    <!-- Internet/Network Access -->
-    <!-- No explicit permissions are required for internet access on iOS -->
-
-    <!-- SMS Permissions (not applicable for iOS) -->
-    <!-- You can configure push notifications but direct SMS reading is not supported. -->
-
-    <!-- Launch Screen & Storyboards -->
-    <key>UILaunchStoryboardName</key>
-    <string>LaunchScreen</string>
-    <key>UIMainStoryboardFile</key>
-    <string>Main</string>
-    <key>UISupportedInterfaceOrientations</key>
-    <array>
-        <string>UIInterfaceOrientationPortrait</string>
-        <string>UIInterfaceOrientationLandscapeLeft</string>
-        <string>UIInterfaceOrientationLandscapeRight</string>
-    </array>
-    <key>UISupportedInterfaceOrientations~ipad</key>
-    <array>
-        <string>UIInterfaceOrientationPortrait</string>
-        <string>UIInterfaceOrientationPortraitUpsideDown</string>
-        <string>UIInterfaceOrientationLandscapeLeft</string>
-        <string>UIInterfaceOrientationLandscapeRight</string>
-    </array>
-
-    <!-- Other necessary configuration for Flutter -->
-    <key>CADisableMinimumFrameDurationOnPhone</key>
-    <true/>
-    <key>UIApplicationSupportsIndirectInputEvents</key>
-    <true/>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>NeethusApp</string>
+	<key>CFBundleExecutable</key>
+	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>NeethusApp</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>$(FLUTTER_BUILD_NAME)</string>
+	<key>CFBundleVersion</key>
+	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>http</string>
+		<string>https</string>
+		<string>mailto</string>
+		<string>facebook</string>
+		<string>tel</string>
+		<string>instagram</string>
+		<string>youtube</string>
+		<string>fb</string>
+		<string>fb://</string>
+		<string>twitter</string>
+	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Your app requires Bluetooth access to connect with nearby devices.</string>
+	<key>NSCallUsageDescription</key>
+	<string>Your app requires call functionality for customer support.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Your app requires access to contacts to manage your contacts.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Your app requires location access at all times for better functionality.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your app requires location access even in the background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Your app requires location access to provide location-based features.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Your app requires microphone access for voice-related features.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your app requires access to your photo library to upload or view pictures.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 </dict>
 </plist>
