--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = neethusacademy
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.esightbusinesssolutions.NeethusApp
+PRODUCT_BUNDLE_IDENTIFIER = com.NeethusAcademy.Neethusapp
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
