--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: neethusacademy
+name: NeethusApp
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -40,10 +40,6 @@ dependencies:
   google_fonts: ^6.2.1
   lottie: ^3.1.3
   gap: ^3.0.1
-  intl_phone_number_input:
-    git:
-      url: https://github.com/Shahidbangash/intl_phone_number_input.git
-      ref: develop
   provider: ^6.1.2
   pinput: ^5.0.0
   permission_handler: ^11.3.1
@@ -54,10 +50,10 @@ dependencies:
   fluttertoast: ^8.2.8
   path_provider: ^2.1.5
   flutter_svg: ^2.0.14
-  url_launcher: ^6.3.1
+  url_launcher: any
   geolocator: ^13.0.1
   loading_animation_widget: ^1.3.0
-  firebase_core: ^3.9.0
+  intl_phone_field: ^3.2.0
  
 
 dev_dependencies:
