--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,7 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>http</string>
@@ -35,39 +36,29 @@
 		<string>fb://</string>
 		<string>twitter</string>
 	</array>
-	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>Your app requires Bluetooth access to connect with nearby devices.</string>
-	<key>NSCallUsageDescription</key>
-	<string>Your app requires call functionality for customer support.</string>
+
 	<key>NSContactsUsageDescription</key>
-	<string>Your app requires access to contacts to manage your contacts.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Your app requires location access at all times for better functionality.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Your app requires location access even in the background.</string>
+	<string>Neethus Academy uses your contacts to help you invite friends and manage student contact information efficiently.</string>
+
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Your app requires location access to provide location-based features.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Your app requires microphone access for voice-related features.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Your app requires access to your photo library to upload or view pictures.</string>
+	<string>Your location is collected once to help us associate it with your registration and improve service experience. It is securely sent to our server and not shown anywhere in the app.</string>
+
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>remote-notification</string>
-	</array>
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
