--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.NeethusAcademy" "\0"
-            VALUE "FileDescription", "NeethusAcademy" "\0"
+            VALUE "CompanyName", "com.neethusacademy" "\0"
+            VALUE "FileDescription", "neethusacademy" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "NeethusAcademy" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.NeethusAcademy. All rights reserved." "\0"
-            VALUE "OriginalFilename", "NeethusApp.exe" "\0"
-            VALUE "ProductName", "NeethusApp" "\0"
+            VALUE "InternalName", "neethusacademy" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.neethusacademy. All rights reserved." "\0"
+            VALUE "OriginalFilename", "neethuslearningapplication.exe" "\0"
+            VALUE "ProductName", "neethuslearningapplication" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
